lesson22 page Dialogs NavLink

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -8,12 +8,9 @@
 
 }
 
-.dialog {
-
-}
-.dialogsSection .activeD {
-    color: gold;
-    font-weight: bold;
+.dialog a{
+    color: black;
+    text-decoration: none;
 }
 
 .messagesSection {
