--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 .App {
     display: grid;
     width: 1200px;
+    height: 100vh;
     margin: 0 auto;
     grid-template-areas:
     'h h'
     'n c';
     grid-auto-rows: 60px 1fr;
     grid-auto-columns: 2fr 10fr;
-    grid-gap: 10px;
 }
 
 .appWrapperContent {
     grid-area: c;
-    background-color: tomato;
+    background-color: white;
 }
 
 
