--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,14 @@
 .header {
     grid-area: h;
     background-color: green;
+    opacity: 0.5;
+    display: flex;
+    align-items: center;
+    justify-content: left;
 }
 
-.header img {
-    width: 50px;
+.header div img {
+    width: 60px;
+    height: auto;
+    margin-left: 20px;
 }
