Lesson 37 (creating store, OOP)

--- a/src/components/Nav/Navbar.module.css
+++ b/src/components/Nav/Navbar.module.css
@@ -18,7 +18,7 @@
     position: relative;
     display: inline-block;
     overflow: hidden;
-
+    transition: 500ms linear;
 }
 
 .item a::before {
