--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -3,3 +3,17 @@
     height: 80px;
     border-radius: 50%;
 }
+
+.selectedPage {
+    font-weight: bold;
+    color: orangered;
+}
+
+.pageNumber {
+    padding: 10px;
+}
+
+.pageNumber:hover {
+    font-weight: bold;
+    cursor: pointer;
+}
