--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,11 +4,20 @@
     opacity: 0.5;
     display: flex;
     align-items: center;
-    justify-content: left;
+    justify-content: space-between;
 }
 
 .header div img {
     width: 60px;
     height: auto;
     margin-left: 20px;
+}
+
+.loginContainer {
+    float: right;
+    margin-right: 20px;
+}
+
+.loginContainer a {
+    color: white;
 }
