--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,7 +1,10 @@
 .dialogsPageWrapper {
     display: grid;
     grid-template-columns: 2fr 10fr;
-    padding: 10px;
+    padding: 20px;
+    min-height: 100vh;
+    margin: 10px 0 0 10px;
+    background: rgb(227,227,227);
 }
 
 .dialogsSection {
