--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -4,8 +4,8 @@
 
 h3 {
     font-weight: bold;
-    font-size: 15px;
-    padding: 5px 0px;
+    font-size: 20px;
+    padding: 5px 0;
     margin-bottom: 5px;
 }
 
