--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -2,4 +2,35 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    margin: 10px 20px 10px 10px;
+}
+
+.post {
+    margin: 0 0 30px 0;
+    border: 1px solid black;
+    border-radius: 10px;
+    position: relative;
+    min-height: 100px;
+    display: flex;
+    flex-direction: row;
+}
+
+.likes {
+    position: absolute;
+    bottom: -15px;
+    right: 15px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px;
+    width: 80px;
+    height: 30px;
+    background-color: white;
+}
+
+.likes:hover {
+    cursor: pointer;
+}
+
+.profileMessage {
+    padding: 10px 10px 10px 0;
 }
