--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,8 +1,38 @@
 .avaDescriptionWrapper {
     padding: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 300px;
+    background: rgba(255, 255, 255, 0.8);
+    text-align: center;
+}
+
+.avaDescriptionWrapper img {
+    margin-bottom: 20px;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+
+.fullName {
+    font-style: italic;
+    background-color: white;
+    width: 100px;
+    border-radius: 10px;
+    margin: 0 auto 50px;
 }
 
 .profileInfoBackground img{
     max-width: 1000px;
     height: 300px;
+}
+
+.profileStatusWrapper {
+    font-weight: bold;
+    font-size: 20px;
+}
+.profileStatusWrapper:hover {
+    cursor: pointer;
 }
