--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -4,3 +4,9 @@
     border-radius: 50%;
 }
 
+.userWrapper {
+    min-height: 100vh;
+    background: rgb(227,227,227);
+    margin: 10px 0 0 10px;
+    padding: 20px;
+}
