--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -10,3 +10,16 @@
     margin: 10px 0 0 10px;
     padding: 20px;
 }
+
+.userContainer {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.photo {
+    margin-bottom: 10px;
+}
+
+button {
+    margin-bottom: 10px;
+}
