--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -16,6 +16,24 @@
     border-radius: 50%;
 }
 
+input[type='file'] {
+    display: none;
+}
+
+.changeAva {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: relative;
+    top: -50px;
+    left: 35px;
+    background-color: #f9f9fa;
+}
+
+.changeAva:hover {
+    cursor: pointer;
+}
+
 .fullName {
     font-style: italic;
     background-color: white;
